--- a/templates/paths/index.html
+++ b/templates/paths/index.html
@@ -16,6 +16,7 @@
                     {{ etd }}
                 {% endfor %}
                 ${{ form.instance.cheapest.rate }}
+                {{ form.instance.cheapest.sea_line }}
             </p>
 
             <p>Самый быстрый вариант: 
@@ -23,6 +24,7 @@
                     {{ etd }}
                 {% endfor %}
                 ${{ form.instance.fastest.rate }}
+                {{ form.instance.fastest.sea_line }}
             </p>
         {% endif %}
     </div>
