Начинает модель внешних автовывозов

--- a/templates/paths/sea_rr_calculation.html
+++ b/templates/paths/sea_rr_calculation.html
@@ -7,12 +7,12 @@
         {% if form.is_valid %}
             <div class="mb-2">
                 <p class="h3">Прямое море<p>
-                {% for rate in direct_sea_rates %}{{ rate }} + автовывоз {{ rate.truck_price }} ₽{% endfor %}
+                {% for rate in direct_sea_rates %}{{ rate }} + автовывоз {{ rate.truck }} ₽{% endfor %}
             </div>
             <div class="mb-2">
                 <p class="h3">Море + ЖД</p>
                 {% for rate in rates %}
-                    {{ rate.0 }} + {{ rate.1 }} + автовывоз {{ rate.1.truck_price }} ₽
+                    {{ rate.0 }} + {{ rate.1 }} + автовывоз {{ rate.1.truck }} ₽
                 {% endfor %}
             </div>
         {% endif %}
