--- a/templates/paths/sea_rr_calculation.html
+++ b/templates/paths/sea_rr_calculation.html
@@ -5,14 +5,16 @@
 <main class="row">
     <div class="col-md-6 mx-auto">
         {% if form.is_valid %}
+        {% if direct_sea_rates %}
             <div class="mb-2">
                 <p class="h3">Прямое море<p>
-                {% for rate in direct_sea_rates %}{{ rate }} + автовывоз {{ rate.truck }} ₽{% endfor %}
+                <div>{% for rate in direct_sea_rates %}{{ rate }} + автовывоз {{ rate.truck }} ₽{% endfor %}</div>
             </div>
+        {% endif %}
             <div class="mb-2">
                 <p class="h3">Море + ЖД</p>
                 {% for rate in rates %}
-                    {{ rate.0 }} + {{ rate.1 }} + автовывоз {{ rate.1.truck }} ₽
+                    <div>{{ rate.0 }} + {{ rate.1 }} + автовывоз {{ rate.1.truck }} ₽</div>
                 {% endfor %}
             </div>
         {% endif %}
