--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
         <title>Straight Way pathfinder</title>
         {% load django_bootstrap5 %}
         {% bootstrap_css %}
+        {% bootstrap_javascript %}
         {% htmx_script %}
     </head>
 
