--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,3 +1,32 @@
 <header>
-    <h1>Тестирование моря и ЖД</h1>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    {% with request.resolver_match.view_name as view_name %}
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link {% if view_name == 'paths:sea_rr_calculation' %} text-info {% endif %}" href="{% url 'paths:sea_rr_calculation' %}">Мультимодальные</a>
+                <a class="nav-link" href="#">Прямое море</a>
+                <a class="nav-link" href="#">Прямое ЖД</a>
+                <a class="nav-link" href="#">Прямое авто</a>
+                <a class="nav-link" href="#">Прямое авиа</a>
+                
+                {% if user.is_authenticated %}
+                <form method="post" action="{% url 'logout' %}" style="display:inline;">
+                  {% csrf_token %}
+                  <button type="submit" class="nav-link btn btn-link">
+                      Выйти
+                  </button>
+                </form>
+                {% else %}
+                    <a class="nav-link {% if view_name == 'login' %} text-info {% endif %}" href="{% url 'login' %}">Войти</a>
+                {% endif %}
+            </div>
+        </div>
+    <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+     {% endwith %}
+  </div>
+</nav>
 </header>
