--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -38,7 +38,7 @@
       </form>
       <div>
         <!-- Ссылка для перехода на страницу восстановления пароля. -->
-        <a href="{% url 'password_reset' %}">Забыли пароль?</a>
+        <!-- <a href="{% url 'password_reset' %}">Забыли пароль?</a> -->
       </div>
     </div>
   </div>
